# memory-graph

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLOUD_BACKEND_TEST_COVERAGE_REPORT.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_GAPS_SUMMARY.txt  DOCUMENTATION_UPDATE_CHECKLIST.md  Dockerfile  INSTALLATION_COMPLETE.md  LICENSE  MIGRATION.md  README.md  README_REORGANIZATION_PLAN.md  REDTEAM_FINDINGS.md  RELEASE_NOTES.md  SECURITY_REVIEW.md  coverage.json  docker-compose.full.yml  docker-compose.neo4j.yml  docker-compose.yml  manifest.json  master-plan.md  pyproject.toml  smithery.yaml
.github/ISSUE_TEMPLATE/: feedback.yml
.github/workflows/: sdk-release.yml  test.yml
docs/: ADMIN_TOOLS.md  CLAUDE_CODE_SETUP.md  CLOUD_BACKEND.md  CONFIGURATION.md  CONTEXT_EXTRACTION.md  COVERAGE_IMPROVEMENTS_2025-01.md  COVERAGE_REPORT.md  COVERAGE_STRATEGY.md  CYPHER_COMPATIBILITY.md  DEPLOYMENT.md  FULL_MODE.md  MARKETING_EXECUTIVE_SUMMARY.md  MCP_CLIENT_COMPATIBILITY.md  PRODUCT_ROADMAP.md  PUBLISHING_CHECKLIST.md  PYPI_SETUP_GUIDE.md  RELEASE_NOTES_v1.0.0.md  TOOLS.md  TOOL_DESCRIPTION_AUDIT.md  TOOL_PROFILES.md  TOOL_SELECTION_GUIDE.md  TROUBLESHOOTING.md  WORKPLAN.md  claude-code-web.md  deployment_strategy.md  development-setup.md  enhancement-plan.md  github-discussions-announcement.md  marketing-plan.md  schema.md  test-summary-p2-priority.md
docs/adr/: 001-neo4j-over-postgres.md  002-mcp-protocol-choice.md  003-async-database-layer.md  004-module-organization-strategy.md  005-test-strategy.md  006-intelligence-layer-architecture.md  008-proactive-intelligence-architecture.md  013-database-backup-export-architecture.md  014a-turso-backend-evaluation.md  014b-backend-implementation-spec.md  014c-turso-comparison.md  015-universal-export-migration-architecture.md  016-bi-temporal-tracking.md  017-context-budget-constraint.md  README.md
docs/archive/: 1-WORKPLAN.md  10-WORKPLAN.md  11-WORKPLAN.md  12-WORKPLAN.md  13-WORKPLAN.md  14-WORKPLAN.md  15-WORKPLAN.md  17-WORKPLAN.md  18-WORKPLAN.md  19-WORKPLAN.md  2-WORKPLAN.md  3-WORKPLAN.md  4-WORKPLAN.md  5-WORKPLAN.md  8-WORKPLAN.md  9-WORKPLAN.md  BUG_REPORT_MCP_INITIALIZATION_CRASH.md  CONTEXT_BUDGET.md  FULL_MODE_LEGACY.md  MCP_1.23_UPGRADE_NOTES.md  MIGRATION.md  MIGRATION_IMPLEMENTATION_SUMMARY.md  PHASE4_RELATIONSHIP_SYSTEM.md  PHASE_2.5_COMPLETION_REPORT.md  README.md  SCALING_FEATURES_WORKPLAN.md  completed-tasks-2025-01.md  completed_phases.md  deployment_strategy.md  enhancement-plan.md  implementation-plan.md
docs/examples/: CLAUDE_MD_EXAMPLES.md
docs/html/: index.html
docs/planning/: 0-WORKPLAN-MARKETING.md  1-WORKPLAN.md  10-WORKPLAN.md  11-WORKPLAN.md  12-WORKPLAN.md  16-WORKPLAN.md  19-WORKPLAN.md  2-WORKPLAN-COMPLETED.md  2-WORKPLAN.md  20-WORKPLAN-cloud-backend.md  21-WORKPLAN-ladybugdb.md  22-WORKPLAN-update-mcp-descriptions.md  3-WORKPLAN.md  33-WORKPLAN-config-refactor.md  4-WORKPLAN.md  5-WORKPLAN.md  6-WORKPLAN.md  7-WEBSITE-WORKPLAN.md  9-WORKPLAN.md  MIGRATION_QUICK_START.md  PRODUCT_ROADMAP.md  WORKPLAN.md  WORKPLAN_INDEX.md
docs/quickstart/: CHATGPT_DESKTOP.md  CLAUDE_DESKTOP.md  CLINE_SETUP.md  CONTINUE_SETUP.md  CURSOR_SETUP.md  GEMINI_CLI_SETUP.md  OPENCODE_SETUP.md  VSCODE_COPILOT_SETUP.md  WINDSURF_SETUP.md
examples/claude-code-hooks/: README.md  copy-to-project.sh
experimental/: README.md  intelligence_tools.py  test_integration_handlers.py  test_intelligence_handlers.py  test_proactive_handlers.py
experimental/integration/: __init__.py  test_context_capture.py
experimental/intelligence/: test_pattern_recognition.py  test_temporal.py
scripts/: benchmark_backends.py  build_mcpb.py
sdk/: README.md  RELEASE_NOTES.md  pyproject.toml
sdk/docs/: api.md  autogen.md  crewai.md  langchain.md  llamaindex.md
sdk/examples/: __init__.py  autogen_example.py  crewai_example.py  langchain_example.py  llamaindex_example.py
sdk/memorygraphsdk/: __init__.py  async_client.py  client.py  exceptions.py  models.py
sdk/memorygraphsdk/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  llamaindex.py
sdk/tests/: __init__.py  conftest.py  test_async_client.py  test_autogen_integration.py  test_client.py  test_crewai_integration.py  test_env_api_key.py  test_langchain_integration.py  test_llamaindex_integration.py  test_models.py
src/claude_memory/: advanced_tools.py  proactive_tools.py  server.py
src/memorygraph/: __init__.py  __main__.py  advanced_tools.py  cli.py  config.py  database.py  graph_analytics.py  integration_tools.py  migration_tools_module.py  models.py  proactive_tools.py  relationships.py  server.py  sqlite_database.py
tests/: _helpers.py  conftest.py  test_backend_config.py  test_cli.py  test_cli_coverage.py  test_cloud_retry_config.py  test_config.py  test_database.py  test_e2e_cloud_backend.py  test_exceptions.py  test_export_import.py  test_factory_config.py  test_graph_analytics.py  test_health_check.py  test_hooks.sh  test_main_entry.py  test_migration_config.py  test_models.py  test_multi_term_search.py  test_multitenant_models.py  test_protocols.py  test_relationships.py  test_remaining_backend_config.py  test_remaining_backend_config_RESULTS.md  test_search_enriched.py  test_search_fuzzy.py  test_search_tolerance.py  test_server.py  test_server_coverage_improved.py  test_server_init.py  test_server_tools.py  test_session_briefing.py  test_simplification.py  test_sqlite_integration.py  test_tool_integration.py
tests/analytics/: __init__.py  test_advanced_queries.py
tests/backends/: conftest.py  test_backend_factory.py  test_backend_imports.py  test_base_backend.py  test_cloud_backend.py  test_cloud_backend_integration.py  test_factory_coverage.py  test_falkordb_backend.py  test_falkordb_coverage.py  test_falkordb_integration.py  test_falkordblite_backend.py  test_falkordblite_coverage.py  test_falkordblite_integration.py  test_ladybugdb_backend.py  test_ladybugdb_integration.py  test_memgraph_backend.py  test_memgraph_backend_coverage.py  test_neo4j_backend.py  test_sqlite_backend.py  test_turso_backend.py
ts/: Dockerfile  package.json  tsconfig.json
(+135 files in other folders)
